# DBCraft

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
app/core/: config.py  enums.py  exceptions.py
app/domain/: entities.py  repositories.py  service.py
app/infrastructure/: connection_manager.py  di.py  dialect_adapter.py  models.py  repositories.py
app/ui/: deps.py  index.py  mermaid.py  pyvis_test.py  Главная.py
app/ui/pages/: 2_Связи_.py  Data.py  Конструктор.py
data/system/: dbcraft.db
tests/: test_repository.py
